test/bad/coord0.pacc
/*
nocc 'parse.pacc: In function ‘pacc_parse’:
parse.pacc:8:17: error: expected expression before ‘)’ token'
*/

/* test that C errors are reported at the right place in the pacc file */

S <- "foo" { ++ }
